# SecureFolder

./: CMakeLists.txt  README.md  USER_GUIDE.md  build.bat  clean.bat  design-spec.md  install.bat  uninstall.bat
resources/: resource.rc  shell_resource.rc
src/: main.cpp
src/Common/: Types.h  Utils.h
src/Core/: CryptoEngine.cpp  CryptoEngine.h  FolderDisguise.cpp  FolderDisguise.h  SecureDelete.cpp  SecureDelete.h  SecureFolderManager.cpp  SecureFolderManager.h
src/Resources/: dialogs.rc
src/ShellExt/: ShellExt.def  ShellExtension.cpp
src/UI/: GUIDialog.cpp  GUIDialog.h
